<resources>
    <string name="app_name">Student Registration</string>
    <string name="student_registration">Student Registration</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="hobbies">Hobbies</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="form_data">form data</string>
</resources>