<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="13dp"
        android:text="@string/student_registration"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="14dp"
        android:autofillHints="Name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/roll"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="6dp"
        android:autofillHints="Roll"
        android:ems="10"
        android:hint="@string/roll_number"
        android:inputType="text"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others" />

    </RadioGroup>

    <MultiAutoCompleteTextView
        android:id="@+id/hobbies"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/hobbies"
        app:layout_constraintBottom_toTopOf="@+id/programme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="159dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="35dp"
        android:autofillHints="Birthday"
        android:clickable="true"
        android:focusable="false"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programme" />

    <Spinner
        android:id="@+id/programme"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/dob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:text="@string/select_gender"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roll" />
</androidx.constraintlayout.widget.ConstraintLayout>